<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.NewGameSettingFragment"
    android:background="@color/teal_700"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_title_input"
        style="?attr/textInputOutlinedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:backgroundTint="#00000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/game_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="end">

        <Button
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/add_person"
            android:id="@+id/add_player_button"
            android:text="@string/add_player" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player_list"
        android:layout_marginTop="10dp"
        tools:itemCount="5"
        android:divider="@color/white"
        tools:listitem="@layout/player_item"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/start_board"
        android:text="@string/start_game"
        />

</LinearLayout>
