<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".ui.home.BoardScreenFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/game_title"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/board_screen"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:backgroundTint="#00000000"
                android:src="@drawable/baseline_calculate_24"
                android:contentDescription="@string/skor_hesapla"
                android:id="@+id/calculate_button"
                />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="3dp" />

        <LinearLayout
            android:id="@+id/player_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/turn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/turn"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:dividerColor="@color/black" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="3dp" />

        <LinearLayout
            android:id="@+id/score_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_score"
        android:src="@drawable/baseline_add_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>
